bluec-tests/tests/invalid/types_float/malformed_exponent.c
int main(void)
{
    float f = 1.0e10.0f;
    return 0;
}